fix(auth): bullets incorrectly aligned

--- a/components/Auth/Auth.module.scss
+++ b/components/Auth/Auth.module.scss
@@ -79,6 +79,7 @@
 .items {
   @include shared.mobile-only {
     padding: 0;
+    margin-left: 16px;
   }
 
   @include shared.not-mobile {
